<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

      <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
         android:background="#F77618"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:checked="true"
            android:textColor="#ffffff"
            android:text="@string/home"
            android:textSize="15sp"
            android:drawableTop="@drawable/tab_selector_home"
            />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:text="@string/job_hunting" 
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:drawableTop="@drawable/tab_selector_job"/>
       
        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            android:textSize="15sp"
            android:text="我的简历"
            android:textColor="#ffffff"
            android:drawableTop="@drawable/tab_selector_job"/>

        <RadioButton
            android:id="@+id/tab_rb_4"
            style="@style/tab_rb_style"
            android:text="@string/individual_center" 
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:drawableTop="@drawable/tab_selector_individual"/>
    </RadioGroup>

   

</LinearLayout>