<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ebecee" >

    <include
        android:id="@+id/titleLayout"
        layout="@layout/title" />
    
    <ScrollView android:layout_width="fill_parent"
        	    android:layout_height="fill_parent"
        	    android:layout_below="@id/titleLayout">
      <RelativeLayout  
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        	    		
        	  <include android:id="@+id/inc_search"
		        android:layout_height="0dp"
		        layout="@layout/search" />
        	  
        	  <RelativeLayout android:id="@+id/rl_new_message"
        	      			  android:layout_below="@+id/inc_search"
        	      			  android:layout_width="fill_parent"
        	      			  android:layout_height="wrap_content"
        	      			  android:gravity="center_vertical"
        	      			  android:layout_marginTop="20dp"
        	      			  android:paddingTop="5dp"
        	      			  android:paddingBottom="5dp"
        	      			  android:background="#ffffff">
        	      <TextView android:layout_width="wrap_content"
        	          		android:layout_height="wrap_content"
        	          		android:textSize="15sp"
        	          		 android:layout_marginLeft="10dp"
        	          		android:text="@string/newtitle"/>
        	      <LinearLayout android:layout_width="wrap_content"
        	          			android:layout_height="wrap_content"
        	          			android:layout_alignParentRight="true"
        	          			android:layout_marginRight="10dp">
        	          	<TextView android:layout_width="wrap_content"
		        	          		android:layout_height="wrap_content"
		        	          		android:text="@string/newright_left"
		        	          		android:textSize="13sp"
		        	          		android:textColor="#989898"/>
        	          	<TextView android:layout_width="wrap_content"
		        	          		android:layout_height="wrap_content"
		        	          		android:id="@+id/newjob_count"
		        	          		android:text="0"
		        	          		android:textSize="13sp"
		        	          		android:textColor="#989898"/>
        	          	<TextView android:layout_width="wrap_content"
		        	          		android:layout_height="wrap_content"
		        	          		android:text="@string/newright_right"
		        	          		android:textSize="13sp"
		        	          		android:textColor="#989898"/>
        	      </LinearLayout>
        	      
        	  </RelativeLayout>
            	<EditText android:layout_width="fill_parent"
                	  android:layout_height="1dp"
                	  android:background="@drawable/shape"
                	  android:layout_below="@id/rl_new_message"/>
            	
    	        <ListView android:id="@+id/job_listview"
                  	  android:layout_below="@id/rl_new_message"
                	  android:layout_width="fill_parent"
                	  android:layout_height="wrap_content"
                	  android:layout_weight="1"
                	  android:divider="#ffffff"
					  ></ListView> 
				<TextView android:id="@+id/job_tv_text"
				    	  android:layout_below="@id/job_listview"
				    	  android:layout_width="fill_parent"
				    	  android:layout_height="wrap_content"
				    	  android:gravity="center"
				    	  android:visibility="gone"
				    	  android:layout_margin="20dp"
				    	  android:text="@string/job_prompt"/>
					  
                	      
            	<RelativeLayout android:id="@+id/job_bottom"
                			android:layout_width="fill_parent"
                			android:layout_height="wrap_content"
                			android:gravity="center"
                			android:layout_marginTop="10dp"
                			android:layout_below="@id/job_tv_text"
                			>
                	<Button android:id="@+id/job_botton_left"
                	    	android:layout_width="wrap_content"
                	    	android:layout_height="wrap_content"
                	    	android:layout_alignParentLeft="true"
                	    	android:layout_marginLeft="20dp"
                	    	android:text="@string/buttom_onPage"/>
                	<LinearLayout android:layout_width="wrap_content"
                	    		android:layout_height="wrap_content"
                	    		android:layout_centerInParent="true">
                	    	<TextView android:id="@+id/job_tv_page_left"
                	    	    	  android:layout_width="wrap_content"
		                	    	  android:layout_height="wrap_content"
		                	    	  android:text="1"/>
		                	<TextView android:layout_width="wrap_content"
		                	    	  android:layout_height="wrap_content"
		                	    	  android:text="@string/buttom_slash"/>
		                	<TextView   android:id="@+id/job_tv_page_right"
		                	    		android:layout_width="wrap_content"
		                	    	  android:layout_height="wrap_content"
		                	    	  android:text="1"/>
                	</LinearLayout>
                	
                	<Button android:id="@+id/job_botton_right"
                	    	android:layout_width="wrap_content"
                	    	android:layout_height="wrap_content"
                	    	android:layout_alignParentRight="true"
                	    	android:layout_marginRight="20dp"
                	    	android:text="@string/buttom_UpPage"/>
            </RelativeLayout>
		            <RelativeLayout android:layout_width="fill_parent"
		                			android:layout_height="50dp"
		                			android:layout_below="@+id/job_bottom">
                	</RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    		<RelativeLayout android:layout_width="fill_parent"
        			android:layout_height="fill_parent">
			        <ProgressBar
			            android:id="@+id/job_progressBar"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerInParent="true"
			            android:visibility="gone" />
	       </RelativeLayout>
</RelativeLayout>