<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ebecee">
    <View  android:id="@+id/view_1"
        	android:layout_width="fill_parent"
        	android:layout_height="1dp"
        	android:layout_marginTop="5dp"
        	android:background="#c0c0c0"/>
    <RelativeLayout android:id="@+id/education_item_rl"
        			android:layout_below="@+id/view_1"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:paddingLeft="15dp"
        			android:paddingTop="5dp"
        			android:paddingBottom="5dp"
        			android:background="#ffffff">
			 <RelativeLayout android:id="@+id/ll_1"
			     		android:layout_width="fill_parent"
			     		  android:layout_height="wrap_content"
			     		  android:orientation="horizontal">
			     <TextView  android:id="@+id/education_item_time_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:text="@string/education_item_time_title"/>
			     <TextView  android:id="@+id/education_item_time"
			         		android:layout_toRightOf="@+id/education_item_time_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:layout_marginLeft="10dp"
			         		android:text=""/>
			 </RelativeLayout>
			 <RelativeLayout android:id="@+id/ll_2"
			     			android:layout_below="@id/ll_1"
			     			android:layout_width="fill_parent"
			     		  android:layout_height="wrap_content"
			     		  android:orientation="horizontal">
			     <TextView  android:id="@+id/education_item_education_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:text="@string/education_item_education_title"/>
			     <TextView  android:id="@+id/education_item_education"
			         		android:layout_toRightOf="@+id/education_item_education_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:layout_marginLeft="10dp"
			         		android:text=""/>
			 </RelativeLayout>
			 <RelativeLayout android:id="@+id/ll_3"
			    			 android:layout_below="@id/ll_2"
			     			android:layout_width="fill_parent"
			     		  android:layout_height="wrap_content"
			     		  android:orientation="horizontal">
			     <TextView  android:id="@+id/education_item_school_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:text="@string/education_item_school_title"/>
			     <TextView  android:id="@+id/education_item_school"
			         		android:layout_toRightOf="@+id/education_item_school_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:layout_marginLeft="10dp"
			         		android:text=""/>
			 </RelativeLayout>
			 <RelativeLayout android:id="@+id/ll_4"
			     			android:layout_below="@id/ll_3"
			     			android:layout_width="fill_parent"
			     		  android:layout_height="wrap_content"
			     		  android:orientation="horizontal">
			     <TextView  android:id="@+id/education_item_professional_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:text="@string/education_item_professional_title"/>
			     <TextView  android:id="@+id/education_item_professional"
			         		android:layout_toRightOf="@+id/education_item_professional_title"
			         		android:layout_width="wrap_content"
			         		android:layout_height="wrap_content"
			         		android:layout_marginLeft="10dp"
			         		android:text=""/>
			 </RelativeLayout>
	 </RelativeLayout>
	 <View  android:id="@+id/view_2"
	     	android:layout_below="@id/education_item_rl"
        	android:layout_width="fill_parent"
        	android:layout_marginBottom="5dp"
        	android:layout_height="1dp"
        	android:background="#c0c0c0"/>
</RelativeLayout>