<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ebecee" >
    <RelativeLayout android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:paddingLeft="15dp"
        			android:layout_marginTop="5dp"
        			android:layout_marginBottom="5dp"
        			android:paddingTop="5dp"
        			android:paddingBottom="5dp"
        			android:background="#ffffff">
        	<LinearLayout android:id="@+id/word_ll_1"
        	    		  android:layout_width="fill_parent"
        	    		  android:layout_height="wrap_content"
        	    		  android:orientation="horizontal">
        	    	<TextView android:id="@+id/word_tv_time"
        	    	          android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"
        	    	    	  android:text="工作单位："
        	    	    	  android:visibility="invisible"/>
        	    	<TextView android:id="@+id/word_tv_time_value"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"/>
        	</LinearLayout>	
        	<LinearLayout android:id="@+id/word_ll_2"
        	    		  android:layout_below="@+id/word_ll_1"
        	    		  android:layout_width="fill_parent"
        	    		  android:layout_height="wrap_content"
        	    		  android:orientation="horizontal">
        	    	<TextView android:id="@+id/word_tv_company"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"
        	    	    	  android:text="@string/word_tv_company"/>
        	    	<TextView android:id="@+id/word_tv_company_value"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"/>
        	</LinearLayout>	
        	<LinearLayout android:id="@+id/word_ll_3"
        	    		  android:layout_below="@+id/word_ll_2"
        	    		  android:layout_width="fill_parent"
        	    		  android:layout_height="wrap_content"
        	    		  android:orientation="horizontal">
        	    	<TextView android:id="@+id/word_tv_Inposition"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"
        	    	    	  android:text="@string/word_tv_Inposition"/>
        	    	<TextView android:id="@+id/word_tv_Inposition_value"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"/>
        	</LinearLayout>	
        	<LinearLayout android:id="@+id/word_ll_4"
        	    		  android:layout_below="@+id/word_ll_3"
        	    		  android:layout_width="fill_parent"
        	    		  android:layout_height="wrap_content"
        	    		  android:orientation="horizontal">
        	    	<TextView android:id="@+id/word_tv_description"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"
        	    	    	  android:text="@string/word_tv_description"/>
        	    	<TextView android:id="@+id/word_tv_description_value"
        	    	    	  android:layout_width="wrap_content"
        	    	    	  android:layout_height="wrap_content"/>
        	</LinearLayout>			
        
        
        
    </RelativeLayout>

</RelativeLayout>